region: Fix handling of variants in "Copy" button

Instead of splitting the list of layouts into layouts and variants,
we were expecting strings of the form:
layout1 variant1, layout2 variant2
to be handled automatically. We should instead create the lists
of layouts and variants separately before passing them to localed.

https://bugzilla.gnome.org/show_bug.cgi?id=670607